# airlab_lidar_3dgs

./: CMakeLists.txt  README.md  package.xml
config/: color_registration.cfg  launch_config.cfg
image_samples/: reconstruction.webm
launch/: data_saver_launch.py  record_bag_launch.py
shell_scripts/: full_pipeline.sh
src/: global_processor.cpp  image_saver.cpp  odom_saver.cpp  path_publisher.cpp  subscriber.cpp
utils/: camera_pose_estimator.cpp  depth_renderer.cpp  export_colmap.cpp  pose_estimator.cpp  pose_viewer.cpp  reconstruction.cpp  registration.cpp
